# IntelliVoice

./: .gitignore  Cargo.toml  README.md  config.toml  spectral-voice-blend-prompt.md
pkg/: INSTALL-arch.md  PKGBUILD  spectralblend.desktop
src/: audio.rs  config.rs  main.rs  pipewire_filter.rs  realtime.rs
src/dsp/: compressor.rs  fft.rs  mixer.rs  mod.rs  pipeline.rs  spectral_mask.rs  voice_gate.rs
src/gui/: app.rs  mod.rs  pw_thread.rs
